# opal-engine

./: CMakeLists.txt  README.md  game_config.yaml
assets/: textures.json
data/: test_map.json  tiles.json
src/: Components.cpp  Components.hpp  Core.hpp  Entities.cpp  Entities.hpp  Game.cpp  Game.hpp  Networking.cpp  Networking.hpp  RayCore.hpp  Renderer.cpp  Renderer.hpp  Server.cpp  Server.hpp  SparseSet.hpp  Systems.cpp  Systems.hpp  Tile.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  main.cpp
utils/: lines_of_code.py
